[package]
name = "HybridSockSpire"
version = "0.1.0"
edition = "2024"
authors = ["sqxy090123 <sqx20150423@outlook.com>"]
repository = "https://github.com/sqxy090123/HybridSockSpire"

[dependencies]
native-windows-gui = "1.0.11"
winapi = { version = "0.3", features = ["winuser", "minwindef"] }
encoding_rs = "0.8"
chrono = "0.4"

[package.metadata.winres]
windows_subsystem = "windows"